# qst-em-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  components.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  def.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  server.rs
src/components/: Info.vue
